--- a/din7.yaml
+++ b/din7.yaml
@@ -5,6 +5,9 @@ summary:
 requirements:
   - Must be pin-compatible with 180 degree connectors.
   - Must be pin-compatible with other 270 degree connectors.
+keywords:
+  - 180 degree
+  - 270 degree
 contacts:
   1: av-bus-audio-left
   2: av-bus-common
