--- a/db44.yaml
+++ b/db44.yaml
@@ -1,6 +1,11 @@
 name: DB44
-description: The high-density version of DB25.
-summary: This connector is not common but has a common form factor. This connector would ideally feature the things found in the DB25 spec and all the things we couldn't fit into that spec.
+description: >
+  This connector is not common but has a common form factor.
+  This connector would ideally feature the things found in the
+  DB25 spec and all the things we couldn't fit into that spec.
+summary: The high-density version of DB25.
+aliases:
+  - D-sub 44
 requirements: tbd
 ideas:
   - uart
