--- a/de9.yaml
+++ b/de9.yaml
@@ -1,10 +1,16 @@
 name: DE9
-description:
-  "The proposed Retro Specification for DE9 connectors. Commonly referred to as DB9, DE9 connectors were commonly used by consumers to connect modems, mice and other small peripherals to traditional computers. They are often used by professionals who wish to utilize the older RS-232 or RS-422 protocols. Since these are rarely found in modern computing, the connectors are prime candidates for respecification."
+description: >
+  Commonly referred to as DB9, DE9 connectors were commonly used
+  by consumers to connect modems, mice and other small peripherals
+  to traditional computers. They are often used by professionals
+  who wish to utilize the older RS-232 or RS-422 protocols.
+  Since these are rarely found in modern computing, the connectors
+  are prime candidates for respecification.
 requirements:
-  - Must be pin-compatible with off-the-shelf DE9 to DB25 adapters.
-  - Production modules' communication connections must be 5VDC tolerant.
+  -> Must be pin-compatible with off-the-shelf DE9 to DB25 adapters.
+  -> Production modules must be able to tolerate 5VDC logic.
 aliases:
+  - D-sub 9
   - DB9
 contacts:
   1: digital-reference
