--- a/rj11.yaml
+++ b/rj11.yaml
@@ -1,15 +1,17 @@
 name: RJ11
 description: The proposed Retro Specification for RJ11 connectors.
-summary:
+summary: >
   These connectors are being used less and less frequently by consumers.
-  It may be a bit too soon to respecify these connectors, but their inexpensive
-  and generally hardy characteristics make them ideal candidates for respecification.
-  They are commonly used for telephone land-lines and DSL modems.
+  It may be a bit too soon to respecify these connectors, but their
+  inexpensive and generally hardy characteristics make them ideal
+  candidates for respecification. They are commonly used for telephone
+  land-lines and DSL modems.
   Ideally, these will be the primarily used in wearable devices.
   Think of them as... the end of the line.
-  Many hardware stores carry four-wire thin telephone cables. These four-wire cables can
-  drive a small set of NeoPixels without issue. Six-wire cables add a ADC and PWM lines.
-  Either of these can utilize the 1-wire protocol if basic IO is needed.
+  Many hardware stores carry four-wire thin telephone cables. These
+  four-wire cables can drive a small set of NeoPixels without issue.
+  Six-wire cables add a ADC and PWM lines. Either of these can utilize
+  the 1-wire protocol if basic IO is needed.
 keywords:
   - pixel
   - led
@@ -20,8 +22,9 @@ keywords:
   - clothing
   - performance art
 requirements:
-  - Telephone cables must be adapted to be 1:1 cables. Contact 1 should always be contact 1, etc.
-  - Production modules' communication connections must be 5VDC tolerant.
+  -> Telephone cables must be adapted to be 1:1 cables.
+     Contact 1 should always be contact 1, etc.
+  -> Production modules must be able to tolerate 5VDC logic.
 contacts:
   1: adc1
   2: pixel-data
