--- a/db25.yaml
+++ b/db25.yaml
@@ -1,4 +1,4 @@
-name: DB25
+name: DB-25 Connector
 description: >
   DB25 connectors were commonly used by consumers to connect
   printers, modems and other larger peripherals to traditional
