--- a/de15.yaml
+++ b/de15.yaml
@@ -1,6 +1,6 @@
-name: DE15
+name: DE-15 Connector
 description: >
-  Commonly referred to as DB15, DE15 connectors were commonly used
+  Commonly referred to as DB-15, DE-15 connectors were commonly used
   by consumers to connect monitors to to traditional computers.
   Since these still found in modern computing, these connectors
   are not well suited for respecification.
@@ -9,7 +9,7 @@ requirements:
   -> Production modules must be able to tolerate 5VDC logic.
 aliases:
   - D-sub 15
-  - DB15
+  - DB-15
   - VGA
 reference:
   -> http://en.wikipedia.org/wiki/VGA_connector
