--- a/connector-collection/d-subminiature/de-15.yaml
+++ b/connector-collection/d-subminiature/de-15.yaml
@@ -5,11 +5,14 @@ description: >
   Since these still found in modern computing, these connectors
   are not well suited for respecification.
 requirements:
-  -> Must be pin-compatible with off-the-shelf DE9 to DB25 adapters.
-  -> Production modules must be able to tolerate 5VDC logic.
+  -> Must be pin-compatible with computer monitor ports.
 aliases:
   - D-sub 15
   - DB-15
   - VGA
+  - XGA
+keywords:
+  - rgbhv
+  - i2c
 reference:
   -> http://en.wikipedia.org/wiki/VGA_connector
