--- a/connector-collection/d-subminiature/da-15.yaml
+++ b/connector-collection/d-subminiature/da-15.yaml
@@ -1,3 +1,4 @@
+---
 name: DA-15 Connector
 description: >
   DA-15 connectors were commonly used by consumers to connect
@@ -13,7 +14,7 @@ contacts:
   1: one-wire-data
   2: adc-2
   3: adc-3
-  4: reserved
+  4: wave
   5: pwm
   6: pixel-data
   7: i2c-clock
@@ -23,5 +24,5 @@ contacts:
   11: twenty-volts-max
   12: ground
   13: spdif
-  14: controller-area-network-transmit
-  15: controller-area-network-receive
+  14: controller-area-network-receive
+  15: controller-area-network-transmit
