--- a/connector-collection/d-subminiature/de-15.yaml
+++ b/connector-collection/d-subminiature/de-15.yaml
@@ -1,3 +1,4 @@
+---
 name: DE-15 Connector
 description: >
   Commonly referred to as DB-15, DE-15 connectors were commonly used
@@ -5,14 +6,11 @@ description: >
   Since these still found in modern computing, these connectors
   are not well suited for respecification.
 requirements:
-  -> Must be pin-compatible with computer monitor ports.
+  -> Must be pin-compatible with off-the-shelf DE9 to DB25 adapters.
+  -> Production modules must be able to tolerate 5VDC logic.
 aliases:
   - D-sub 15
   - DB-15
   - VGA
-  - XGA
-keywords:
-  - rgbhv
-  - i2c
 reference:
   -> http://en.wikipedia.org/wiki/VGA_connector
