--- a/connector-collection/din/din5.yaml
+++ b/connector-collection/din/din5.yaml
@@ -1,11 +1,14 @@
+---
 name: DIN5
 description: The proposed Retro Specification for DIN5 connectors.
 summary: >
   This connector is ideally suited for office & automotive environments.
 keywords:
+  - din
+  - 90 degree
   - 180 degree
 requirements:
-  - Must be pin-compatible with 270 degree connectors.
+  -> Must be pin-compatible with 90 & 270 degree connectors.
 contacts:
   1: av-bus-audio-left
   2: av-bus-common
