--- a/connector-collection/din/din8.yaml
+++ b/connector-collection/din/din8.yaml
@@ -1,12 +1,15 @@
+---
 name: DIN8
 description: The proposed Retro Specification for DIN8 connectors.
 summary: >
-  This connector is ideally suited for home theater,
-  automotive & FPV environments.
+  This connector is ideally suited for office, home theater &
+  automotive environments.
 requirements:
   - Must be pin-compatible with 180 degree connectors.
   - Must be pin-compatible with other 270 degree connectors.
 keywords:
+  - din
+  - 90 degree
   - 180 degree
   - 270 degree
 contacts:
@@ -15,6 +18,6 @@ contacts:
   3: av-bus-audio-right
   4: regulated-five-volt-supply
   5: ground
-  6: av-bus-video-composite
-  7: av-bus-audio-mic
-  8: twenty-volts-max
+  6: controller-area-network-receive
+  7: controller-area-network-transmit
+  8: spdif
