--- a/connector-collection/din/din5-180.yaml
+++ b/connector-collection/din/din5-180.yaml
@@ -1,22 +1,23 @@
 ---
-name: DIN7
+name: DIN5 180
 reference:
   -> https://en.wikipedia.org/wiki/DIN_connector
-  -> https://en.wikipedia.org/wiki/File:DIN-7_Diagram.svg
+  -> https://en.wikipedia.org/wiki/File:DIN-5_Diagram.svg
 keywords:
   - din
+  - 45 degree
+  - 180 degree
 aliases:
-  - din-45329
+  - din5  
+  - din-41524
 compatible:
+  - din7
   - din8
   - analog-stereo-module
   - analog-stereo-regulated-five-volt-module
-  - can-regulated-five-volt-module
 contacts:
   1: av-bus-audio-left
   2: av-bus-common
   3: av-bus-audio-right
   4: regulated-five-volt-supply
   5: ground
-  6: controller-area-network-low
-  7: controller-area-network-high
