--- a/connector-collection/din/din5-270.yaml
+++ b/connector-collection/din/din5-270.yaml
@@ -1,24 +1,19 @@
 ---
-name: DIN8
+name: DIN5 270
 reference:
   -> https://en.wikipedia.org/wiki/DIN_connector
-  -> https://en.wikipedia.org/wiki/File:DIN-8_Diagram.svg
+  -> https://en.wikipedia.org/wiki/File:DIN-5b_Diagram.svg
 keywords:
   - din
-aliases:
-  - din-45326
+  - cube
+  - 90 degree
+  - 270 degree
 compatible:
-  - analog-stereo-module
-  - analog-stereo-regulated-five-volt-module
-  - spdif-or-analog-stereo-module
+  - din8
   - spdif-module
   - spdif-regulated-five-volt-module
-  - can-regulated-five-volt-module
   - can-spdif-regulated-five-volt-module
 contacts:
-  1: av-bus-audio-left
-  2: av-bus-common
-  3: av-bus-audio-right
   4: regulated-five-volt-supply
   5: ground
   6: controller-area-network-low
