pro audio spec definition, header definition, wiring standards

--- a/connector-collection/din/din5-240.yaml
+++ b/connector-collection/din/din5-240.yaml
@@ -13,7 +13,7 @@ compatible:
   - din6-240
   - microphone-module
   - cb-handset-module
-  - control-room-module
+  - talkback-module
   - public-address-module
 contacts:
   1: ground
