--- a/connector-collection/din/din6-240.yaml
+++ b/connector-collection/din/din6-240.yaml
@@ -19,7 +19,7 @@ compatible:
   - smart-microphone-module
   - cb-handset-module
   - smart-cb-handset-module
-  - control-room-module
+  - talkback-module
   - public-address-module
 contacts:
   1: ground
