--- a/connector-collection/pro-audio/mc8-90.yaml
+++ b/connector-collection/pro-audio/mc8-90.yaml
@@ -30,9 +30,9 @@ tips:
      7 & 8.
   -> Modern field digital audio recorders may feature
      limited monitor mix capabilities. It is possible to
-     give have a monaural mix on Channel 1 (left) and
-     a separate monaural mix on Channel 2 (right). In the
-     case of a sound technician & boom operator, the boom mic
+     have a monaural mix on Channel 1 (left) and  a separate
+     monaural mix on Channel 2 (right).
+     In the case of a sound technician & boom operator, the boom mic
      can be present on both channels, and everything else on
      Channel 2. This is accomplished by fading all the
      desired channels to the right. This allows the boom op
