minor revisions to retro-audio-header & mini-xlr5; alpine-m-bus & ioio docs

--- a/popular-interface-collection/alpine-m-bus/alpine-m-bus.yaml
+++ b/popular-interface-collection/alpine-m-bus/alpine-m-bus.yaml
@@ -1,5 +1,8 @@
+---
 name: Alpine M-BUS Interface
 summary: Connect your Retro Modules to an Alpine device featuring M-BUS.
+reference:
+  -> https://github.com/Olstyle/MBus
 keywords:
   - m-bus
   - audio
