--- a/connectors/module-hefty/centronics-36/centronics-36.yaml
+++ b/connectors/module-hefty/centronics-36/centronics-36.yaml
@@ -6,8 +6,8 @@ description: >
   choice for use in rough environments. Since there are no pins, no pins can be
   bent! Most modern connectors follow this practice: embed contacts along a
   wall of insulating material.
-  Larger versions of these connectors are extensively used by telephone
-  companies.
+  Larger versions of these connectors, such as `centronics-50` are frequently
+  used by telephone companies.
 capabilities:
   -> DC Power
   -> Analog HD Video
@@ -24,10 +24,6 @@ aliases:
   - Printer Port
   - Telco
 contacts:
-  1: todo: dig up specs on DB-25 to Centronics-36
-
-
-
   1: spdif
   2: controller-area-network-high
   3: controller-area-network-low
@@ -42,17 +38,27 @@ contacts:
   12: spi-master-in-slave-out
   13: spi-clock
   14: host-reset
-  15: regulated-five-volts
-  16: - av-bus-video-separate-luminance
-      - av-bus-video-component-pr
-  17: - av-bus-video-separate-chrominance
-      - av-bus-video-component-y
-  18: - av-bus-video-composite
-      - av-bus-video-component-pb
-  19: av-bus-audio-mic
+  16: common
+  17: common
+  18: no-connection
+  19: common
   20: common
-  21: av-bus-common
+  21: common
   22: common
-  23: av-bus-audio-left
-  24: av-bus-audio-right
-  25: av-bus-audio-special-effects
+  23: common
+  24: common
+  25: common
+  26: common
+  27: common
+  28: common
+  29: common
+  30: common
+  31: - av-bus-video-separate-luminance
+      - av-bus-video-component-pr
+  32: regulated-five-volts
+  33: common
+  34: no-connection
+  35: no-connection
+  36: - av-bus-video-separate-chrominance
+      - av-bus-video-component-y
+
