--- a/connectors/module-hefty/centronics-50/centronics-50.yaml
+++ b/connectors/module-hefty/centronics-50/centronics-50.yaml
@@ -2,8 +2,8 @@
 name: 50 Contact Centronics Connector
 summary: 
 description: 
-capabilities:
-  - dc-power:
+ideas:
+  - automotive:
     - twelve-volts-nominal-car
     - twelve-volts-nominal-car-switched
     - twelve-volts-nominal-car-left-blinker
@@ -12,9 +12,9 @@ capabilities:
     - twelve-volts-nominal-car-brakes
     - twelve-volts-nominal-car-reverse
     - twelve-volts-nominal-trailer
-  -> common:
     - trailer-detect
   -> HDBaseT
+  -> Ethernet
   -> Analog HD Video
   -> Analog SD Video
   -> Analog Line Level Audio
@@ -24,41 +24,6 @@ capabilities:
   -> Pro Digital Audio Return
   -> NeoPixel support (WS2812, etc)
   -> CAN bus
-  -> Gigabit
 aliases:
   - Telco
-contacts:
-  1: 
-
-
-
-
-
-  1: spdif
-  2: controller-area-network-high
-  3: controller-area-network-low
-  4: i2c-clock
-  5: i2c-data
-  6: digital-reference
-  7: pixel-data
-  8: twenty-volts-max
-  9: twenty-volts-max
-  10: spi-slave-select
-  11: spi-master-out-slave-in
-  12: spi-master-in-slave-out
-  13: spi-clock
-  14: host-reset
-  15: regulated-five-volts
-  16: - av-bus-video-separate-luminance
-      - av-bus-video-component-pr
-  17: - av-bus-video-separate-chrominance
-      - av-bus-video-component-y
-  18: - av-bus-video-composite
-      - av-bus-video-component-pb
-  19: av-bus-audio-mic
-  20: common
-  21: av-bus-common
-  22: common
-  23: av-bus-audio-left
-  24: av-bus-audio-right
-  25: av-bus-audio-special-effects
+contacts: reserved
