--- a/connectors/module/dsub-db-25/dsub-db-25.yaml
+++ b/connectors/module/dsub-db-25/dsub-db-25.yaml
@@ -9,7 +9,7 @@ description: >
 requirements:
   -> Must be pin-compatible with off-the-shelf DE9 to DB25 adapters.
   -> Pins 18 through 25 must be dead-short tolerant.
-     Many printer cables tie these pins to common.
+     Many printer cables tie these pins to `common`.
   -> Production modules must be able to tolerate 5VDC logic.
 capabilities:
   -> DC Power
