--- a/definitions/pixel-data.yaml
+++ b/definitions/pixel-data.yaml
@@ -1,6 +1,6 @@
 ---
 name: Pixel Data
-summary: NZR signal compatible with WS2811/12 RGB LED drivers.
+summary: NZR signal compatible with WS2811/12 RGB LED driver chips.
 reference:
   -> http://www.cylinderlight.com/ledspi
   -> https://www.adafruit.com/products/1378
