--- a/definitions/qualcomm-quick-charger.yaml
+++ b/definitions/qualcomm-quick-charger.yaml
@@ -1,13 +1,13 @@
 ---
 name: Qualcomm Quick Charger
-summary: Faster mobile charging by safely sending 12VDC over a Micro USB cable.
+summary: Faster mobile charging by sending up to 12VDC over a Micro USB cable.
 description: >
   For devices featuring `micro-usb`, charging speed has been an issue.
   Newer devices feature additional circuitry which can communicate with
   Qualcomm Quick Charge certified power supplies. When the power supply
-  confirms the client device can receive 12VDC instead of 5VDC, it sends it.
-  The charging circuit in the client device can handle this higher voltage
-  and put it to immediate use.
+  confirms the client device can receive a voltage other than 5VDC, it will
+  attempt to send the higher specified voltage. The charging circuit in the
+  client device can handle this higher voltage and put it to immediate use.
 reference:
   -> https://www.qualcomm.com/products/snapdragon/quick-charge
   -> http://www.androidcentral.com/quick-charge-car-chargers
