--- a/connectors/module/din7/din7.yaml
+++ b/connectors/module/din7/din7.yaml
@@ -13,7 +13,7 @@ contacts:
   1: av-bus-audio-left
   2: av-bus-common
   3: av-bus-audio-right
-  4: regulated-five-volt-supply
+  4: regulated-five-volts
   5: common
   6: controller-area-network-low
   7: controller-area-network-high
