--- a/connectors/module-internal/header-26/header-26.yaml
+++ b/connectors/module-internal/header-26/header-26.yaml
@@ -40,14 +40,21 @@ contacts:
   16: av-bus-audio-mic
   17: - av-bus-video-composite
       - av-bus-video-component-pb
+      - common
   18: - av-bus-video-separate-luminance
       - av-bus-video-component-pr
+      - common
   19: - av-bus-video-separate-chrominance
       - av-bus-video-component-y
+      - common
   20: common
-  21: av-bus-common
+  21: - av-bus-common
+      - common
   22: common
-  23: av-bus-audio-left
-  24: av-bus-audio-right
-  25: av-bus-audio-special-effects
+  23: - av-bus-audio-left
+      - common
+  24: - av-bus-audio-right
+      - common
+  25: - av-bus-audio-special-effects
+      - common
   26: reserved
