--- a/connectors/module/dsub-dd-24w7/dsub-dd-24w7.yaml
+++ b/connectors/module/dsub-dd-24w7/dsub-dd-24w7.yaml
@@ -1,5 +1,5 @@
 ---
-name: DB-24W7 Connector
+name: DD-24W7 Connector
 description: >
   This connector is not common & has an uncommon form factor.
   It features seven pins well suited for high-current applications,
