--- a/connectors/module/dsub-da-3w3/dsub-da-3w3.yaml
+++ b/connectors/module/dsub-da-3w3/dsub-da-3w3.yaml
@@ -3,7 +3,7 @@ name: DA-3W3 Connector
 description: >
   This connector is not common. It has a fairly common form factor.
   It features three pins well suited for high-current applications.
-summary: The high-current version of DA-15.
+summary: A high-current version of DA-15.
 requirements: tbd
 limitations: tbd
 aliases:
@@ -16,5 +16,5 @@ drawbacks:
   - Harder to find.
 contacts:
   a1: common
-  a2: reserved
-  a3: reserved
+  a2: regulated-five-volts
+  a3: twenty-volts-max
