--- a/connectors/module/dsub-da-7w2/dsub-da-7w2.yaml
+++ b/connectors/module/dsub-da-7w2/dsub-da-7w2.yaml
@@ -4,7 +4,7 @@ description: >
   This connector is not common. It has a fairly common form factor.
   It features two pins well suited for high-current applications,
   and five pins for general purpose applications.
-summary: The high-current version of DA-15.
+summary: A high-current version of DA-15.
 requirements: tbd
 limitations: tbd
 aliases:
@@ -22,4 +22,4 @@ contacts:
   4: reserved
   5: reserved
   a1: common
-  a2: reserved
+  a2: twenty-volts-max
