revising a few mixed-contact connectors to optimize their use with multi-cell battery packs; revising db-25 & de-9 to use 1-wire instead of pixel-data; new dsub connector definitions; standardizing one-wire-data term

--- a/connectors/module-hefty/aviation-gx16-5/aviation-gx16-5.yaml
+++ b/connectors/module-hefty/aviation-gx16-5/aviation-gx16-5.yaml
@@ -16,5 +16,5 @@ contacts:
   1: common
   2: twelve-volts-nominal-switched
   3: pixel-data
-  4: 1-wire
+  4: one-wire-data
   5: twelve-volts-nominal
