--- a/connectors/module-tiny/jst-sm-4/jst-sm-4.yaml
+++ b/connectors/module-tiny/jst-sm-4/jst-sm-4.yaml
@@ -4,7 +4,7 @@ buy:
 reference:
   - http://www.adafruit.com/datasheets/JSTSM.pdf
 contacts:
-  1: 1-wire
+  1: one-wire-data
   2: pixel-data
   3: common
   4: thirty-volts-max
