--- a/connectors/module-hefty/aviation-gx16-6/aviation-gx16-6.yaml
+++ b/connectors/module-hefty/aviation-gx16-6/aviation-gx16-6.yaml
@@ -18,6 +18,6 @@ contacts:
   1: common
   2: twelve-volts-nominal-switched
   3: pixel-data
-  4: 1-wire
+  4: one-wire-data
   5: twelve-volts-nominal
   6: common
