--- a/connectors/module/dsub-db-25/dsub-db-25.yaml
+++ b/connectors/module/dsub-db-25/dsub-db-25.yaml
@@ -55,7 +55,7 @@ contacts:
   4: i2c-clock
   5: i2c-data
   6: digital-reference
-  7: pixel-data
+  7: one-wire-data
   8: thirty-volts-max
   9: thirty-volts-max
   10: spi-slave-select
