--- a/connectors/module/dsub-dc-21w4/dsub-dc-21w4.yaml
+++ b/connectors/module/dsub-dc-21w4/dsub-dc-21w4.yaml
@@ -1,6 +1,5 @@
 name: DC-21W4 Connector
-summary: Multi-Cell 60V Max High-Current Battery Connector
-description: 1S to 13S 60V Max 80A Max Battery Connector
+summary: 30V Max High-Current Power Connector
 aliases:
   - mixed d-sub
 notes:
@@ -15,24 +14,24 @@ notes:
   - Information about the battery pack could be requested via `one-wire-data`
     for automatic charge controller configuration.
 contacts:
-  1: balance-cell-1
-  2: balance-cell-2
-  3: balance-cell-3
-  4: balance-cell-4
-  5: balance-cell-5
-  6: balance-cell-6
-  7: balance-cell-7
-  8: balance-cell-8
-  9: balance-cell-9
-  10: balance-cell-10
-  11: balance-cell-11
-  12: balance-cell-12
-  13: balance-cell-13
-  14: common
-  15: controller-area-network-low
-  16: controller-area-network-high
-  17: one-wire-data
+  1: reserved
+  2: reserved
+  3: reserved
+  4: reserved
+  5: reserved
+  6: reserved
+  7: reserved
+  8: reserved
+  9: reserved
+  10: reserved
+  11: reserved
+  12: reserved
+  13: reserved
+  14: reserved
+  15: reserved
+  16: reserved
+  17: reserved
   a1: common
   a2: common
-  a3: sixty-volts-max
-  a4: sixty-volts-max
+  a3: thirty-volts-max
+  a4: thirty-volts-max
