--- a/connectors/module/dsub-dc-27w2/dsub-dc-27w2.yaml
+++ b/connectors/module/dsub-dc-27w2/dsub-dc-27w2.yaml
@@ -1,6 +1,5 @@
 name: DC-27W2 Connector
-summary: Multi-Cell 80V Max High-Current Battery Connector
-description: 1S to 18S 80V Max 40A Max Battery Connector
+summary: 30V Max High-Current Power Connector
 aliases:
   - mixed d-sub
 notes:
@@ -15,30 +14,30 @@ notes:
   - Information about the battery pack could be requested via `one-wire-data`
     for automatic charge controller configuration.
 contacts:
-  1: balance-cell-1
-  2: balance-cell-2
-  3: balance-cell-3
-  4: balance-cell-4
-  5: balance-cell-5
-  6: balance-cell-6
-  7: balance-cell-7
-  8: balance-cell-8
-  9: balance-cell-9
-  10: balance-cell-10
-  11: balance-cell-11
-  12: balance-cell-12
-  13: balance-cell-13
-  14: balance-cell-14
-  15: balance-cell-15
-  16: balance-cell-16
-  17: balance-cell-17
-  18: balance-cell-18
-  19: common
+  1: 1-wire
+  2: controller-area-network-low
+  3: controller-area-network-high
+  4: reserved
+  5: reserved
+  6: reserved
+  7: reserved
+  8: reserved
+  9: reserved
+  10: reserved
+  11: reserved
+  12: reserved
+  13: reserved
+  14: common-power-request
+  15: reserved
+  16: reserved
+  17: reserved
+  18: reserved
+  19: reserved
   20: reserved
   21: reserved
   22: reserved
-  24: controller-area-network-low
-  23: controller-area-network-high
-  25: one-wire-data
+  24: reserved
+  23: reserved
+  25: reserved
   a1: common
-  a2: seventytwo-volts-nominal
+  a2: thirty-volts-max
