--- a/definitions/one-wire.yaml
+++ b/definitions/one-wire.yaml
@@ -3,7 +3,7 @@ summary:
   1-Wire is a device communications bus system that provides low-speed
   data, signaling, and power over a single conductor.
 aliases:
-  - one wire
+  - one-wire-data
   - micro-lan
 reference:
   - https://en.wikipedia.org/wiki/1-Wire
